<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyCGD2SVEAbUW0l6uLPhZv86fKCrZvRf2Dk</string>
    <string name="app_name">SalonDesBeaute</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">674632155971845</string>
    <string name="facebook_app_id_test">175703936145004</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="lorem_small">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s.</string>
    <string name="lorem_small_2">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. </string>
    <string name="default_hint_text">Where are you going?</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="font_normal">Poppins-Regular_1.ttf</string>
    <string name="font_bold">Poppins-Bold_1.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>
    <string name="notification">Notifications</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_connect_with">OR CONNECT WITH</string>
    <string name="submit">Submit</string>
    <string name="no_worries_just_enter_your_email_and_we_will_take_care_of_it">No Worries, Just enter your email and we will take care of it.</string>
    <string name="no_worries_just_enter_your_information_and_we_will_take_care_of_it">No Worries, Just enter your information and we will take care of it.</string>
    <string name="no_worries_just_enter_your_password_and_we_will_take_care_of_it">No Worries, Just enter your password and we will take care of it.</string>
    <string name="forgot_password_1">Forgot Password</string>
    <string name="back_to_sign_in">Back to Sign in</string>
    <string name="an_email_has_been_sent_to_your_account_with_password_reset_link">An email has been sent to your account with password reset link.</string>
    <string name="thank_you">Thank You!</string>
    <string name="awesome">Awesome!</string>
    <string name="enter_the_code_we_sent_to">Enter the Code we sent to</string>
    <string name="verify">Verify</string>
    <string name="a_verification_code_has_been_sent_to_your_mobile_phone">A verification code has been sent to your mobile phone.</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="will_be_implemented">will be implemented in future version</string>
    <string name="current_pass">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="number_verification">Your phone number has been verified successfully.</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_creating_your_account_you_agree_to_out_n_terms_amp_condition">By Creating your account you agree to out \n Terms Condition</string>
    <string name="name">Name</string>
    <string name="enter_valid_number_error">Enter valid phone number format</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="passwordLength">Password cannot be less than 6 characters</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="enter_valid_pincode">Please Enter Verification Code</string>
    <string name="enter_phone">Mobile Number Cannot be Empty</string>
    <string name="confirm_password_error">Confirm Password did not match</string>
    <string name="same_password_error">New password should be changed from old password</string>
    <string name="enter_name">Enter your Name</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_review">Enter review</string>
    <string name="terms_and_condition">Terms And Conditions</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="samePassword">New password should be changed from previous password</string>
    <string name="conform_password_error">confirm password does not match</string>
    <string name="enter_confirm_password">Confirm Password Field cannot be Empty</string>
    <string name="confirmpasswordLength">Confirm Password cannot be less than 6 characters</string>
    <string name="salon_des_beaute">Salon Des Beaute</string>
    <string name="featured_parlours_services">Featured Parlours &amp; Services</string>
    <string name="top_parlours_near_you">Top Parlours Near You</string>
    <string name="view_profile">View Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to signout?</string>
    <string name="logout">Logout</string>
    <string name="signout">Sign Out</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="discover">Discover</string>
    <string name="view_map">View Map</string>
    <string name="email">Email</string>
    <string name="comment">Comment</string>
    <string name="enter_name_1">Enter Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="contact_no">Contact No</string>
    <string name="address">Address</string>
    <string name="my_bookings">My Bookings</string>
    <string name="up_coming">Up Coming</string>
    <string name="previous">Previous</string>
    <string name="change_password_1">Change Password</string>
    <string name="reviews">Reviews</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notifications_amp_reminders">Notifications &amp; Reminders</string>
    <string name="reservation_date">Reservation Date</string>
    <string name="placed_on">Placed On</string>
    <string name="promotions">Promotions</string>
    <string name="near_by">Near By</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="dummy_address">17-C 24th Commercial St- (021) 258551363 \n Opens at 8:00am Closes at 11:00pm</string>
    <string name="dummy_address1">17-C 24th Commercial St- (021) 258551363  Opens at 8:00am Closes at 11:00pm</string>
    <string name="dummy_address2">37 B St,Shop 11, Wasi Building R444, Behind Shokath Restaurant, Karachi, Pakistan</string>
    <string name="my_profile">My Profile</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="please_rate_your_experince">Please rate your experince.</string>
    <string name="thank_you_1">Thank you!</string>
    <string name="tap_a_star_to_rate">Tap a star to rate</string>
    <string name="this_would_help_us_continually_improve_our_service">This would help us Continually improve our service</string>
    <string name="review_title_i_e_nice_trip">Review Title(i.e Nice trip)</string>
    <string name="would_you_like_to_write_anything_about_your_trip_with_salon_des_beaute">Would you like to write anything about your trip with Salon Des Beaute</string>
    <string name="your_reservation_request_has_been_received_n_we_ll_send_you_reminder_before_your_reservation_date">Your reservation request has been received.\n We\'ll send you reminder before your reservation date.</string>
</resources>