<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/roundshapelayout"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/textLayout"
        android:layout_width="@dimen/x280"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/x10"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shield_icon" />

        <com.app.salonbeaute.ui.views.AnyTextView
            android:id="@+id/txt_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:gravity="center"
            android:text="@string/thank_you"
            android:textColor="@color/app_text_black"
            android:textSize="@dimen/x17"
            app:typeface="@string/font_bold" />

        <com.app.salonbeaute.ui.views.AnyTextView
            android:id="@+id/txt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginEnd="@dimen/x6"
            android:layout_marginStart="@dimen/x6"
            android:gravity="center"
            android:text="@string/your_reservation_request_has_been_received_n_we_ll_send_you_reminder_before_your_reservation_date"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/x13"
            app:typeface="@string/font_normal" />

        <Button
            android:id="@+id/bn_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x40"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/x15"
            android:background="@drawable/rounded_button_red_border"
            android:paddingEnd="@dimen/x40"
            android:paddingStart="@dimen/x40"
            android:text="Back to Home"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/app_red_dark"
            android:textSize="@dimen/x14" />


    </LinearLayout>


</LinearLayout>