<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/x15"
        android:layout_marginStart="@dimen/x15"
        android:layout_marginTop="@dimen/x10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <com.app.salonbeaute.ui.views.AnyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_marginTop="@dimen/x10"
                android:gravity="center_vertical"
                android:text="@string/notifications_amp_reminders"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/x15"
                app:typeface="@string/font_normal" />

            <ToggleButton
                android:id="@+id/toggleNotification"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/x25"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="@dimen/x10"
                android:layout_marginEnd="@dimen/x15"
                android:background="@drawable/selector_toggle"
                android:checked="true"
                android:text=""
                android:textOff=""
                android:textOn=""/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color" />

        <com.app.salonbeaute.ui.views.AnyTextView
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginTop="@dimen/x10"
            android:gravity="center_vertical"
            android:text="@string/change_password_1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color" />

        <com.app.salonbeaute.ui.views.AnyTextView
            android:id="@+id/btn_reviews"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginTop="@dimen/x10"
            android:gravity="center_vertical"
            android:text="@string/reviews"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color" />

        <com.app.salonbeaute.ui.views.AnyTextView
            android:id="@+id/btn_terms_cond"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginTop="@dimen/x10"
            android:gravity="center_vertical"
            android:text="@string/terms_and_condition"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color" />

        <com.app.salonbeaute.ui.views.AnyTextView
            android:id="@+id/btn_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginTop="@dimen/x10"
            android:gravity="center_vertical"
            android:text="@string/privacy_policy"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color" />


    </LinearLayout>
</ScrollView>
