<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:clipToPadding="false"
          />


        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x48"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            custom:ci_drawable="@drawable/red_radius"
            custom:ci_drawable_unselected="@drawable/white_radius" />

        <com.app.salonbeaute.ui.views.AnyTextView
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x48"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:alpha="0.6"
            android:padding="@dimen/x10"
            android:text="@string/skip"
            android:textColor="@color/white"
            app:typeface="@string/font_normal" />

        <com.app.salonbeaute.ui.views.AnyTextView
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x48"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/x10"
            android:text="@string/next"
            android:textColor="@color/app_red_dark"
            app:typeface="@string/font_normal" />

    </RelativeLayout>

</LinearLayout>