<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background10"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">


            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:padding="@dimen/x15"
                android:layout_margin="@dimen/x15"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <com.app.salonbeaute.ui.views.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x10"
                android:layout_marginEnd="@dimen/x25"
                android:layout_marginStart="@dimen/x25"
                android:gravity="center"
                android:text="@string/forgot_password_1"
                android:textColor="@color/white"
                android:textSize="@dimen/x20"
                app:typeface="@string/font_normal" />

            <com.app.salonbeaute.ui.views.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x25"
                android:layout_marginEnd="@dimen/x25"
                android:layout_marginStart="@dimen/x25"
                android:gravity="start"
                android:text="@string/no_worries_just_enter_your_email_and_we_will_take_care_of_it"
                android:textColor="@color/app_text_color_login"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x25"
                android:layout_marginStart="@dimen/x25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.app.salonbeaute.ui.views.AnyEditTextView
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x40"
                    android:background="@drawable/input_field1"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/x25"
                    android:paddingStart="@dimen/x25"
                    android:layout_marginBottom="@dimen/x15"
                    android:textColor="@color/app_text_color_login"
                    android:textColorHint="@color/app_text_color_login"
                    android:textSize="@dimen/x14"
                    app:typeface="@string/font_normal" />


                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x40"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/x15"
                    android:background="@drawable/rounded_red_button"
                    android:text="@string/submit"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/x14" />

            </LinearLayout>




        </LinearLayout>
    </LinearLayout>
</ScrollView>